crates/pgls_pretty_print/tests/snapshots/multi/tests__update_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/update.sql
snapshot_kind: text
---
CREATE TABLE update_test (a INT DEFAULT 10, b INT, c TEXT);

CREATE TABLE upsert_test (a INT PRIMARY KEY, b TEXT);

INSERT INTO update_test VALUES (5, 10, 'foo');

INSERT INTO update_test (b, a) VALUES (15, 10);

SELECT * FROM update_test;

UPDATE update_test SET a = DEFAULT, b = DEFAULT;

SELECT * FROM update_test;

UPDATE update_test AS t SET b = 10 WHERE t.a = 10;

SELECT * FROM update_test;

UPDATE update_test AS t SET b = t.b + 10 WHERE t.a = 10;

SELECT * FROM update_test;

UPDATE update_test AS t SET t."b" = t.b + 10 WHERE t.a = 10;

UPDATE update_test
SET a = v.i
FROM (VALUES (100, 20)) AS v (i, j)
WHERE
  update_test.b = v.j;

SELECT * FROM update_test;

UPDATE update_test
SET a = v.*
FROM (VALUES (100, 20)) AS v (i, j)
WHERE
  update_test.b = v.j;

INSERT INTO update_test SELECT a, b + 1, c FROM update_test;

SELECT * FROM update_test;

UPDATE update_test
SET (c, b, a) = ('bugle', b + 11, DEFAULT)
WHERE
  c = 'foo';

SELECT * FROM update_test;

UPDATE update_test
SET (c, b) = ('car', a + b),
a = a + 1
WHERE
  a = 10;

SELECT * FROM update_test;

UPDATE update_test
SET (c, b) = ('car', a + b),
b = a + 1
WHERE
  a = 10;

UPDATE update_test
SET (b, a) = (SELECT
  a,
  b
FROM
  update_test
WHERE
  b = 41 AND c = 'car')
WHERE
  a = 100 AND b = 20;

SELECT * FROM update_test;

UPDATE update_test AS o
SET (b, a) = (SELECT
  a + 1,
  b
FROM
  update_test AS i
WHERE
  i.a = o.a AND
  i.b = o.b AND
  i.c IS NOT DISTINCT FROM o.c);

SELECT * FROM update_test;

UPDATE update_test
SET (b, a) = (SELECT
  a + 1,
  b
FROM
  update_test);

UPDATE update_test
SET (b, a) = (SELECT
  a + 1,
  b
FROM
  update_test
WHERE
  a = 1000)
WHERE
  a = 11;

SELECT * FROM update_test;

UPDATE update_test
SET (a, b) = ROW(v.*)
FROM (VALUES (21, 100)) AS v (i, j)
WHERE
  update_test.a = v.i;

UPDATE update_test
SET (a, b) = v.*
FROM (VALUES (21, 101)) AS v (i, j)
WHERE
  update_test.a = v.i;

UPDATE update_test AS t
SET b = update_test.b + 10
WHERE
  t.a = 10;

UPDATE update_test
SET c = repeat('x', 10000)
WHERE
  c = 'car';

SELECT a, b, char_length(c) FROM update_test;

UPDATE update_test AS t
SET (a, b) = (SELECT
  b,
  a
FROM
  update_test AS s
WHERE
  s.a = t.a)
WHERE
  CURRENT_USER = SESSION_USER;

UPDATE update_test AS t
SET (a, b) = (SELECT
  b,
  a
FROM
  update_test AS s
WHERE
  s.a = t.a)
WHERE
  CURRENT_USER = SESSION_USER;

SELECT a, b, char_length(c) FROM update_test;

INSERT INTO upsert_test
VALUES
  (1, 'Boo'),
  (3, 'Zoo');

WITH
aaa
AS (
  SELECT 1 AS a, 'Foo' AS b
)
INSERT INTO upsert_test
VALUES (1, 'Bar')
ON CONFLICT
(a)
DO
UPDATE
SET (b, a) = (SELECT b, a FROM aaa)
RETURNING *;

INSERT INTO upsert_test
VALUES
  (1, 'Baz'),
  (3, 'Zaz')
ON CONFLICT
(a)
DO
UPDATE
SET (b, a) = (SELECT
  b || ', Correlated',
  a
FROM
  upsert_test AS i
WHERE
  i.a = upsert_test.a)
RETURNING *;

INSERT INTO upsert_test
VALUES
  (1, 'Bat'),
  (3, 'Zot')
ON CONFLICT
(a)
DO
UPDATE
SET (b, a) = (SELECT
  b || ', Excluded',
  a
FROM
  upsert_test AS i
WHERE
  i.a = excluded.a)
RETURNING *;

INSERT INTO upsert_test
VALUES (2, 'Beeble')
ON CONFLICT
(a)
DO
UPDATE
SET (b, a) = (SELECT
  b || ', Excluded',
  a
FROM
  upsert_test AS i
WHERE
  i.a = excluded.a)
RETURNING CAST(tableoid AS REGCLASS),
xmin =
CAST(pg_current_xact_id()
AS XID)
AS xmin_correct,
xmax = 0 AS xmax_correct;

INSERT INTO upsert_test
VALUES (2, 'Brox')
ON CONFLICT
(a)
DO
UPDATE
SET (b, a) = (SELECT
  b || ', Excluded',
  a
FROM
  upsert_test AS i
WHERE
  i.a = excluded.a)
RETURNING CAST(tableoid AS REGCLASS),
xmin =
CAST(pg_current_xact_id()
AS XID)
AS xmin_correct,
xmax =
CAST(pg_current_xact_id()
AS XID)
AS xmax_correct;

DROP TABLE "update_test";

DROP TABLE "upsert_test";

CREATE TABLE upsert_test
(a INT PRIMARY KEY, b TEXT)
PARTITION BY LIST(a);

CREATE TABLE upsert_test_1
PARTITION OF upsert_test
FOR VALUES IN (1);

CREATE TABLE upsert_test_2 (b TEXT, a INT PRIMARY KEY);

ALTER TABLE upsert_test
  ATTACH PARTITION
  upsert_test_2
  FOR VALUES IN (2);

INSERT INTO upsert_test
VALUES
  (1, 'Boo'),
  (2, 'Zoo');

WITH
aaa
AS (
  SELECT 1 AS a, 'Foo' AS b
)
INSERT INTO upsert_test
VALUES (1, 'Bar')
ON CONFLICT
(a)
DO
UPDATE
SET (b, a) = (SELECT b, a FROM aaa)
RETURNING *;

WITH
aaa
AS (
  SELECT
    1 AS ctea,
    ' Foo' AS cteb
)
INSERT INTO upsert_test
VALUES
  (1, 'Bar'),
  (2, 'Baz')
ON CONFLICT
(a)
DO
UPDATE
SET (b, a) = (SELECT
  upsert_test.b || cteb,
  upsert_test.a
FROM
  aaa)
RETURNING *;

DROP TABLE "upsert_test";

CREATE TABLE range_parted
(a TEXT, b BIGINT, c NUMERIC, d INT, e VARCHAR)
PARTITION BY RANGE(a, b);

CREATE TABLE part_b_20_b_30
(
  e VARCHAR,
  c NUMERIC,
  a TEXT,
  b BIGINT,
  d INT
);

ALTER TABLE range_parted
  ATTACH PARTITION
  part_b_20_b_30
  FOR VALUES FROM ('b',
  20) TO ('b',
  30);

CREATE TABLE part_b_10_b_20
(e VARCHAR, c NUMERIC, a TEXT, b BIGINT, d INT)
PARTITION BY RANGE(c);

CREATE TABLE part_b_1_b_10
PARTITION OF range_parted
FOR VALUES FROM ('b',
1) TO ('b',
10);

ALTER TABLE range_parted
  ATTACH PARTITION
  part_b_10_b_20
  FOR VALUES FROM ('b',
  10) TO ('b',
  20);

CREATE TABLE part_a_10_a_20
PARTITION OF range_parted
FOR VALUES FROM ('a',
10) TO ('a',
20);

CREATE TABLE part_a_1_a_10
PARTITION OF range_parted
FOR VALUES FROM ('a',
1) TO ('a',
10);

UPDATE part_b_10_b_20 SET b = b - 6;

CREATE TABLE part_c_100_200
(e VARCHAR, c NUMERIC, a TEXT, b BIGINT, d INT)
PARTITION BY RANGE((abs(d)));

ALTER TABLE part_c_100_200
  DROP COLUMN e,
  DROP COLUMN c,
  DROP COLUMN a;

ALTER TABLE part_c_100_200
  ADD COLUMN c NUMERIC,
  ADD COLUMN e VARCHAR,
  ADD COLUMN a TEXT;

ALTER TABLE part_c_100_200
  DROP COLUMN b;

ALTER TABLE part_c_100_200
  ADD COLUMN b BIGINT;

CREATE TABLE part_d_1_15
PARTITION OF part_c_100_200
FOR VALUES FROM (1) TO (15);

CREATE TABLE part_d_15_20
PARTITION OF part_c_100_200
FOR VALUES FROM (15) TO (20);

ALTER TABLE part_b_10_b_20
  ATTACH PARTITION
  part_c_100_200
  FOR VALUES FROM (100) TO (200);

CREATE TABLE part_c_1_100
(
  e VARCHAR,
  d INT,
  c NUMERIC,
  b BIGINT,
  a TEXT
);

ALTER TABLE part_b_10_b_20
  ATTACH PARTITION
  part_c_1_100
  FOR VALUES FROM (1) TO (100);

UPDATE range_parted SET c = c - 50 WHERE c > 97;

UPDATE part_c_100_200 SET c = c - 20, d = c WHERE c = 105;

UPDATE part_b_10_b_20 SET a = 'a';

UPDATE range_parted SET d = d - 10 WHERE d > 10;

UPDATE range_parted SET e = d;

UPDATE part_c_1_100 SET c = c + 20 WHERE c = 98;

UPDATE part_b_10_b_20 SET c = c + 20 RETURNING c, b, a;

UPDATE part_b_10_b_20
SET b = b - 6
WHERE
  c > 116
RETURNING *;

UPDATE range_parted
SET b = b - 6
WHERE
  c > 116
RETURNING a,
b + c;

CREATE TABLE mintab (c1 INT);

INSERT INTO mintab VALUES (120);

CREATE VIEW upview
AS SELECT
  *
FROM
  range_parted
WHERE
  (SELECT c > c1 FROM mintab)
WITH CASCADED CHECK OPTION;

UPDATE upview SET c = 199 WHERE b = 4;

UPDATE upview SET c = 120 WHERE b = 4;

UPDATE upview SET a = 'b', b = 15, c = 120 WHERE b = 4;

UPDATE upview SET a = 'b', b = 15 WHERE b = 4;

DROP VIEW "upview";

UPDATE range_parted
SET c = 95
WHERE
  a = 'b' AND b > 10 AND c > 100
RETURNING range_parted,
*;

CREATE FUNCTION trans_updatetrigfunc()
RETURNS trigger
LANGUAGE "plpgsql"
AS '
  begin
    raise notice ''trigger = %, old table = %, new table = %'',
                 TG_NAME,
                 (select string_agg(old_table::text, '', '' ORDER BY a) FROM old_table),
                 (select string_agg(new_table::text, '', '' ORDER BY a) FROM new_table);
    return null;
  end;
';

CREATE TRIGGER trans_updatetrig
AFTER UPDATE
ON range_parted
REFERENCING OLD TABLE AS old_table
NEW TABLE AS new_table
FOR EACH STATEMENT
EXECUTE FUNCTION trans_updatetrigfunc();

UPDATE range_parted
SET c = CASE
WHEN c = 96 THEN 110
ELSE c + 1
END
WHERE
  a = 'b' AND b > 10 AND c >= 96;

CREATE TRIGGER trans_deletetrig
AFTER DELETE
ON range_parted
REFERENCING OLD TABLE AS old_table
FOR EACH STATEMENT
EXECUTE FUNCTION trans_updatetrigfunc();

CREATE TRIGGER trans_inserttrig
AFTER INSERT
ON range_parted
REFERENCING NEW TABLE AS new_table
FOR EACH STATEMENT
EXECUTE FUNCTION trans_updatetrigfunc();

UPDATE range_parted
SET c = c + 50
WHERE
  a = 'b' AND b > 10 AND c >= 96;

DROP TRIGGER "trans_deletetrig" ON "range_parted";

DROP TRIGGER "trans_inserttrig" ON "range_parted";

CREATE FUNCTION func_parted_mod_b()
RETURNS trigger
AS '
BEGIN
   NEW.b = NEW.b + 1;
   return NEW;
END '
LANGUAGE "plpgsql";

CREATE TRIGGER trig_c1_100
BEFORE INSERT OR UPDATE
ON part_c_1_100
FOR EACH ROW
EXECUTE FUNCTION func_parted_mod_b();

CREATE TRIGGER trig_d1_15
BEFORE INSERT OR UPDATE
ON part_d_1_15
FOR EACH ROW
EXECUTE FUNCTION func_parted_mod_b();

CREATE TRIGGER trig_d15_20
BEFORE INSERT OR UPDATE
ON part_d_15_20
FOR EACH ROW
EXECUTE FUNCTION func_parted_mod_b();

UPDATE range_parted
SET c = CASE
WHEN c = 96 THEN 110
ELSE c + 1
END
WHERE
  a = 'b' AND b > 10 AND c >= 96;

UPDATE range_parted
SET c = c + 50
WHERE
  a = 'b' AND b > 10 AND c >= 96;

UPDATE range_parted SET b = 15 WHERE b = 1;

DROP TRIGGER "trans_updatetrig" ON "range_parted";

DROP TRIGGER "trig_c1_100" ON "part_c_1_100";

DROP TRIGGER "trig_d1_15" ON "part_d_1_15";

DROP TRIGGER "trig_d15_20" ON "part_d_15_20";

DROP FUNCTION func_parted_mod_b();

ALTER TABLE range_parted
  ENABLE ROW LEVEL SECURITY;

CREATE USER regress_range_parted_user;

GRANT ALL
ON TABLE range_parted,
mintab
TO regress_range_parted_user;

CREATE POLICY seeall
ON range_parted
AS PERMISSIVE
FOR SELECT
TO PUBLIC
USING (TRUE);

CREATE POLICY policy_range_parted
ON range_parted
AS PERMISSIVE
FOR UPDATE
TO PUBLIC
USING (TRUE)
WITH CHECK (c % 2 = 0);

SET SESSION AUTHORIZATION regress_range_parted_user;

UPDATE range_parted
SET a = 'b',
c = 151
WHERE
  a = 'a' AND c = 200;

RESET session_authorization;

CREATE FUNCTION func_d_1_15()
RETURNS trigger
AS '
BEGIN
   NEW.c = NEW.c + 1; -- Make even numbers odd, or vice versa
   return NEW;
END '
LANGUAGE "plpgsql";

CREATE TRIGGER trig_d_1_15
BEFORE INSERT
ON part_d_1_15
FOR EACH ROW
EXECUTE FUNCTION func_d_1_15();

SET SESSION AUTHORIZATION regress_range_parted_user;

UPDATE range_parted
SET a = 'b',
c = 151
WHERE
  a = 'a' AND c = 200;

RESET session_authorization;

SET SESSION AUTHORIZATION regress_range_parted_user;

UPDATE range_parted
SET a = 'b',
c = 150
WHERE
  a = 'a' AND c = 200;

RESET session_authorization;

DROP TRIGGER "trig_d_1_15" ON "part_d_1_15";

DROP FUNCTION func_d_1_15();

RESET session_authorization;

CREATE POLICY policy_range_parted_subplan
ON range_parted
AS RESTRICTIVE
FOR UPDATE
TO PUBLIC
USING (TRUE)
WITH CHECK ((SELECT
  range_parted.c <= c1
FROM
  mintab));

SET SESSION AUTHORIZATION regress_range_parted_user;

UPDATE range_parted
SET a = 'b',
c = 122
WHERE
  a = 'a' AND c = 200;

UPDATE range_parted
SET a = 'b',
c = 120
WHERE
  a = 'a' AND c = 200;

RESET session_authorization;

CREATE POLICY policy_range_parted_wholerow
ON range_parted
AS RESTRICTIVE
FOR UPDATE
TO PUBLIC
USING (TRUE)
WITH CHECK (range_parted =
CAST(ROW('b', 10, 112, 1, NULL)
AS range_parted));

SET SESSION AUTHORIZATION regress_range_parted_user;

UPDATE range_parted
SET a = 'b',
c = 112
WHERE
  a = 'a' AND c = 200;

RESET session_authorization;

SET SESSION AUTHORIZATION regress_range_parted_user;

UPDATE range_parted
SET a = 'b',
c = 116
WHERE
  a = 'a' AND c = 200;

RESET session_authorization;

DROP POLICY "policy_range_parted" ON "range_parted";

DROP POLICY "policy_range_parted_subplan" ON "range_parted";

DROP POLICY
"policy_range_parted_wholerow" ON "range_parted";

REVOKE ALL
ON TABLE range_parted,
mintab
FROM regress_range_parted_user;

DROP ROLE regress_range_parted_user;

DROP TABLE "mintab";

CREATE FUNCTION trigfunc()
RETURNS trigger
LANGUAGE "plpgsql"
AS '
  begin
    raise notice ''trigger = % fired on table % during %'',
                 TG_NAME, TG_TABLE_NAME, TG_OP;
    return null;
  end;
';

CREATE TRIGGER parent_delete_trig
AFTER DELETE
ON range_parted
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER parent_update_trig
AFTER UPDATE
ON range_parted
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER parent_insert_trig
AFTER INSERT
ON range_parted
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER c1_delete_trig
AFTER DELETE
ON part_c_1_100
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER c1_update_trig
AFTER UPDATE
ON part_c_1_100
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER c1_insert_trig
AFTER INSERT
ON part_c_1_100
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER d1_delete_trig
AFTER DELETE
ON part_d_1_15
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER d1_update_trig
AFTER UPDATE
ON part_d_1_15
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER d1_insert_trig
AFTER INSERT
ON part_d_1_15
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER d15_delete_trig
AFTER DELETE
ON part_d_15_20
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER d15_update_trig
AFTER UPDATE
ON part_d_15_20
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

CREATE TRIGGER d15_insert_trig
AFTER INSERT
ON part_d_15_20
FOR EACH STATEMENT
EXECUTE FUNCTION trigfunc();

UPDATE range_parted SET c = c - 50 WHERE c > 97;

DROP TRIGGER "parent_delete_trig" ON "range_parted";

DROP TRIGGER "parent_update_trig" ON "range_parted";

DROP TRIGGER "parent_insert_trig" ON "range_parted";

DROP TRIGGER "c1_delete_trig" ON "part_c_1_100";

DROP TRIGGER "c1_update_trig" ON "part_c_1_100";

DROP TRIGGER "c1_insert_trig" ON "part_c_1_100";

DROP TRIGGER "d1_delete_trig" ON "part_d_1_15";

DROP TRIGGER "d1_update_trig" ON "part_d_1_15";

DROP TRIGGER "d1_insert_trig" ON "part_d_1_15";

DROP TRIGGER "d15_delete_trig" ON "part_d_15_20";

DROP TRIGGER "d15_update_trig" ON "part_d_15_20";

DROP TRIGGER "d15_insert_trig" ON "part_d_15_20";

CREATE TABLE part_def PARTITION OF range_parted DEFAULT;

INSERT INTO range_parted VALUES ('c', 9);

UPDATE part_def SET a = 'd' WHERE a = 'c';

UPDATE part_def SET a = 'a' WHERE a = 'd';

UPDATE part_a_10_a_20 SET a = 'ad' WHERE a = 'a';

UPDATE range_parted SET a = 'ad' WHERE a = 'a';

UPDATE range_parted SET a = 'bd' WHERE a = 'b';

UPDATE range_parted SET a = 'a' WHERE a = 'ad';

UPDATE range_parted SET a = 'b' WHERE a = 'bd';

DROP TABLE "range_parted";

CREATE TABLE list_parted
(a TEXT, b INT)
PARTITION BY LIST(a);

CREATE TABLE list_part1
PARTITION OF list_parted
FOR VALUES IN ('a', 'b');

CREATE TABLE list_default PARTITION OF list_parted DEFAULT;

INSERT INTO list_part1 VALUES ('a', 1);

INSERT INTO list_default VALUES ('d', 10);

UPDATE list_default SET a = 'a' WHERE a = 'd';

UPDATE list_default SET a = 'x' WHERE a = 'd';

DROP TABLE "list_parted";

CREATE TABLE utrtest
(a INT, b TEXT)
PARTITION BY LIST(a);

CREATE TABLE utr1 (a INT CHECK (a IN (1)), q TEXT, b TEXT);

CREATE TABLE utr2 (a INT CHECK (a IN (2)), b TEXT);

ALTER TABLE utr1
  DROP COLUMN q;

ALTER TABLE utrtest
  ATTACH PARTITION
  utr1 FOR VALUES IN (1);

ALTER TABLE utrtest
  ATTACH PARTITION
  utr2 FOR VALUES IN (2);

INSERT INTO utrtest
VALUES (1, 'foo')
RETURNING *,
CAST(tableoid AS REGCLASS),
xmin =
CAST(pg_current_xact_id()
AS XID)
AS xmin_ok;

INSERT INTO utrtest
VALUES (2, 'bar')
RETURNING *,
CAST(tableoid AS REGCLASS),
xmin =
CAST(pg_current_xact_id()
AS XID)
AS xmin_ok;

INSERT INTO utrtest
VALUES (2, 'bar')
RETURNING *,
CAST(tableoid AS REGCLASS);

UPDATE utrtest
SET b = b || b
FROM (VALUES
  (1),
  (2))
AS s (x)
WHERE
  a = s.x
RETURNING *,
CAST(tableoid AS REGCLASS),
xmin =
CAST(pg_current_xact_id()
AS XID)
AS xmin_ok;

UPDATE utrtest
SET a = 3 - a
FROM (VALUES
  (1),
  (2))
AS s (x)
WHERE
  a = s.x
RETURNING *,
CAST(tableoid AS REGCLASS),
xmin =
CAST(pg_current_xact_id()
AS XID)
AS xmin_ok;

UPDATE utrtest
SET a = 3 - a
FROM (VALUES
  (1),
  (2))
AS s (x)
WHERE
  a = s.x
RETURNING *,
CAST(tableoid AS REGCLASS);

DELETE FROM utrtest
RETURNING *,
CAST(tableoid AS REGCLASS),
xmax =
CAST(pg_current_xact_id()
AS XID)
AS xmax_ok;

DROP TABLE "utrtest";

CREATE TABLE list_parted
(a NUMERIC, b INT, c BIGINT)
PARTITION BY LIST(a);

CREATE TABLE sub_parted
PARTITION OF list_parted
FOR VALUES IN (1)
PARTITION BY LIST(b);

CREATE TABLE sub_part1 (b INT, c BIGINT, a NUMERIC);

ALTER TABLE sub_parted
  ATTACH PARTITION
  sub_part1 FOR VALUES IN (1);

CREATE TABLE sub_part2 (b INT, c BIGINT, a NUMERIC);

ALTER TABLE sub_parted
  ATTACH PARTITION
  sub_part2 FOR VALUES IN (2);

CREATE TABLE list_part1 (a NUMERIC, b INT, c BIGINT);

ALTER TABLE list_parted
  ATTACH PARTITION
  list_part1
  FOR VALUES IN (2, 3);

INSERT INTO list_parted VALUES (2, 5, 50);

INSERT INTO list_parted VALUES (3, 6, 60);

INSERT INTO sub_parted VALUES (1, 1, 60);

INSERT INTO sub_parted VALUES (1, 2, 10);

UPDATE sub_parted SET a = 2 WHERE c = 10;

SELECT
  CAST(CAST(tableoid AS REGCLASS)
  AS TEXT),
  *
FROM
  list_parted
WHERE
  a = 2
ORDER BY 1;

UPDATE list_parted SET b = c + a WHERE a = 2;

SELECT
  CAST(CAST(tableoid AS REGCLASS)
  AS TEXT),
  *
FROM
  list_parted
WHERE
  a = 2
ORDER BY 1;

CREATE FUNCTION func_parted_mod_b()
RETURNS trigger
AS '
BEGIN
   NEW.b = 2; -- This is changing partition key column.
   return NEW;
END '
LANGUAGE "plpgsql";

CREATE TRIGGER parted_mod_b
BEFORE UPDATE
ON sub_part1
FOR EACH ROW
EXECUTE FUNCTION func_parted_mod_b();

SELECT
  CAST(CAST(tableoid AS REGCLASS)
  AS TEXT),
  *
FROM
  list_parted
ORDER BY 1,
  2,
  3,
  4;

UPDATE list_parted SET c = 70 WHERE b = 1;

SELECT
  CAST(CAST(tableoid AS REGCLASS)
  AS TEXT),
  *
FROM
  list_parted
ORDER BY 1,
  2,
  3,
  4;

DROP TRIGGER "parted_mod_b" ON "sub_part1";

CREATE OR REPLACE FUNCTION func_parted_mod_b()
RETURNS trigger
AS '
BEGIN
   raise notice ''Trigger: Got OLD row %, but returning NULL'', OLD;
   return NULL;
END '
LANGUAGE "plpgsql";

CREATE TRIGGER trig_skip_delete
BEFORE DELETE
ON sub_part2
FOR EACH ROW
EXECUTE FUNCTION func_parted_mod_b();

UPDATE list_parted SET b = 1 WHERE c = 70;

SELECT
  CAST(CAST(tableoid AS REGCLASS)
  AS TEXT),
  *
FROM
  list_parted
ORDER BY 1,
  2,
  3,
  4;

DROP TRIGGER "trig_skip_delete" ON "sub_part2";

UPDATE list_parted SET b = 1 WHERE c = 70;

SELECT
  CAST(CAST(tableoid AS REGCLASS)
  AS TEXT),
  *
FROM
  list_parted
ORDER BY 1,
  2,
  3,
  4;

DROP FUNCTION func_parted_mod_b();

CREATE TABLE non_parted (id INT);

INSERT INTO non_parted
VALUES
  (1),
  (1),
  (1),
  (2),
  (2),
  (2),
  (3),
  (3),
  (3);

UPDATE list_parted AS t1
SET a = 2
FROM non_parted AS t2
WHERE
  t1.a = t2.id AND a = 1;

SELECT
  CAST(CAST(tableoid AS REGCLASS)
  AS TEXT),
  *
FROM
  list_parted
ORDER BY 1,
  2,
  3,
  4;

DROP TABLE "non_parted";

DROP TABLE "list_parted";

CREATE OR REPLACE FUNCTION
dummy_hashint4(
  a INT,
  seed BIGINT
)
RETURNS BIGINT
AS ' begin return (a + seed); end; '
LANGUAGE "plpgsql"
IMMUTABLE;

CREATE OPERATOR CLASS custom_opclass
  FOR TYPE INT
  USING hash
  AS OPERATOR 1 =,
  FUNCTION 2 dummy_hashint4(INT, BIGINT);

CREATE TABLE hash_parted
(a INT, b INT)
PARTITION BY HASH(a custom_opclass,
b custom_opclass);

CREATE TABLE hpart1
PARTITION OF hash_parted
FOR VALUES WITH (MODULUS 2, REMAINDER 1);

CREATE TABLE hpart2
PARTITION OF hash_parted
FOR VALUES WITH (MODULUS 4, REMAINDER 2);

CREATE TABLE hpart3
PARTITION OF hash_parted
FOR VALUES WITH (MODULUS 8, REMAINDER 0);

CREATE TABLE hpart4
PARTITION OF hash_parted
FOR VALUES WITH (MODULUS 8, REMAINDER 4);

INSERT INTO hpart1 VALUES (1, 1);

INSERT INTO hpart2 VALUES (2, 5);

INSERT INTO hpart4 VALUES (3, 4);

UPDATE hpart1 SET a = 3, b = 4 WHERE a = 1;

UPDATE hash_parted SET b = b - 1 WHERE b = 1;

UPDATE hash_parted SET b = b + 8 WHERE b = 1;

DROP TABLE "hash_parted";

DROP OPERATOR CLASS "custom_opclass" USING "hash";

DROP FUNCTION dummy_hashint4(INT, BIGINT);
