crates/pgls_pretty_print/tests/snapshots/multi/tests__update_multi_assign_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/update_multi_assign.sql
snapshot_kind: text
---
CREATE TABLE ledger
(
  id INT PRIMARY KEY,
  balance NUMERIC,
  updated_at TIMESTAMP WITH TIME ZONE
);

CREATE TABLE adjustments
(
  id INT,
  delta NUMERIC,
  seen_at TIMESTAMP WITH TIME ZONE
);

UPDATE ledger
SET (balance, updated_at) = (balance + delta, seen_at)
FROM adjustments
WHERE
  ledger.id = adjustments.id;

INSERT INTO ledger AS l
(id, balance, updated_at)
VALUES (1, 10, NOW())
ON CONFLICT
(id)
DO
UPDATE
SET (balance, updated_at) = (
  excluded.balance + l.balance,
  excluded.updated_at
);
